# platform-spike

./: .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PROGRESS.md  README.md  SERVICE.MD  docker-compose.stack.yml  docker-compose.yml
.github/: actionlint.yaml  copilot-instructions.md
.github/actions/: README.md
.github/config/: README.md  cache-config.json  license-policy.json  metrics-schema.json  publish-communication.json  publish-data.json  publish-gateway.json  publish-observability.json  publish-tools.json
.github/workflows/: _reusable-build.yml  _reusable-publish-group.yml  _reusable-security.yml  _reusable-validate.yml  build-base-images.yml  cache-management.yml  cost-monitoring.yml  docker-publish.yml  main-deploy.yml  mirror-communication.yml  mirror-data.yml  mirror-gateway.yml  mirror-observability.yml  mirror-tools.yml  pr-checks.yml  publish-communication.yml  publish-data-services.yml  publish-gateway.yml  publish-observability.yml  publish-tools.yml  publish-vendor-images.yml  release.yml  reusable-mirror.yml  reusable-publish.yml  scheduled-maintenance.yml  security-scan.yml  track-build-performance.yml  validate-docker.yml  validate-structure.yml
.templates/: .dockerignore.template  Dockerfile.go.template  Dockerfile.python.template  README.md
config/: README.md  otel-collector-config.yml
config/prometheus/: prometheus.yaml
core/: README.md
core/caching/: README.md
core/feature-management/: README.md
core/gateway/: README.md
core/media/: README.md
core/messaging/: README.md
core/persistence/: README.md
core/secrets/: README.md
core/telemetry/: README.md  otel-collector-config.yml
deployments/: README.md
deployments/docker/: README.md  docker-compose.base.yml  docker-compose.core.yml  docker-compose.observability.yml  docker-compose.production.yml  docker-compose.security.yml  docker-compose.services.yml
docs/: HEALTH-CHECK-FIXES.md  OPERATIONS.md  README.md  TROUBLESHOOTING-INFISICAL.md  sidecar.md
docs/analysis/: ANALYSIS-INDEX.md  ANALYSIS-QUICK-REF.md  ANALYSIS-SETUP.md  README.md  (+1 more)
journal/: JOURNAL-QUICK-START.md  QUICK-START.md  README.md
libs/: README.md
libs/python-sdk/: .coverage  Makefile  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt  test_sdk_smoke.py
libs/python-sdk/arc_common/: __init__.py
libs/python-sdk/arc_common/messaging/: __init__.py  nats_client.py  pulsar_client.py
libs/python-sdk/arc_common/models/: __init__.py  conversation.py
libs/python-sdk/arc_common/observability/: __init__.py  otel.py
libs/python-sdk/tests/: test_models.py  test_nats_client.py  test_otel.py  test_pulsar_client.py
plugins/: README.md
reports/: 1412-ANALYSIS.md  1412-CONCERNS_AND_ACTION_PLAN.md  MAKEFILE_DOCKER_ANALYSIS.md  README.md  build-performance-baseline.json  hadolint-results.txt  security-baseline.json  security-compliance.md  security-scan.json  validation-results.md
scripts/: README.md  create-service.sh  generate-pr-description.sh  generate-task-commit.sh  inspect-service.sh  show-roster.sh  verify-labels.sh
services/: README.md
services/agents/voice/: docker-compose.yml  pyproject.toml
services/agents/voice/src/voice_agent/: __init__.py  main.py
services/agents/voice/src/voice_agent/api/v1/: endpoints.py
services/agents/voice/src/voice_agent/core/: messaging.py  tracing.py
services/agents/voice/src/voice_agent/models/: schemas.py
tests/: README.md
tools/: README.md
(+285 files in other folders)
